--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ guessit==2.1.1
 isodate==0.5.4
 patool==1.12
 pytz==2016.7
-trakt.py==2.9.0
+trakt.py==2.10.1
+celery==3.1.24
+-e git+https://github.com/celery/django-celery#egg=master
